--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,8 @@
   --main-color: #212121;
   --second-color: #757575;
   --clean-color: #ffffff;
+  --dark-background: #2f303a;
+  --light-background: #f5f4fa;
 }
 
 body {
@@ -20,12 +22,15 @@ body {
   font-style: normal;
   font-weight: normal;
 }
+
 .web {
   color: var(--accent-color);
 }
+
 .list {
   list-style: none;
 }
+
 /* Header */
 .logo {
   color: var(--main-color);
@@ -40,6 +45,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+
 .site-nav .link,
 .site-nav .link:visited {
   color: var(--main-color);
@@ -48,15 +54,18 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus,
 .contacts .link:hover,
 .contacts .link:focus {
   color: var(--accent-color);
 }
+
 .site-nav .link.current {
   color: var(--accent-color);
 }
+
 /* section banner */
 .tagline {
   font-weight: 900;
@@ -66,10 +75,12 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+
 .banner {
-  background-color: #2f303a;
+  background-color: var(--dark-background);
   color: var(--clean-color);
 }
+
 .order {
   color: var(--clean-color);
   background-color: var(--accent-color);
@@ -79,6 +90,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
 }
+
 /* section our advantages */
 .advantages h3 {
   font-weight: bold;
@@ -87,15 +99,18 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+
 .advantages .desc {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+
 /* section our team */
 .ourteam {
-  background-color: #f5f4fa;
+  background-color: ;
 }
+
 .ourteam .heading-team {
   font-weight: 500;
   font-size: 16px;
@@ -103,12 +118,14 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 .ourteam .desc {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 /* other */
 .heading {
   font-weight: bold;
@@ -117,12 +134,15 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 .desc {
   color: var(--second-color);
 }
+
 .link {
   text-decoration: none;
 }
+
 /* section gallery */
 .gallery .heading-gallery {
   font-weight: bold;
@@ -130,33 +150,39 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .gallery .desc {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
+
 /* buttons */
 .button {
   color: var(--main-color);
-  background-color: #f5f4fa;
+  background-color: var(--light-background);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 .button:hover,
 .button:focus {
   color: var(--clean-color);
   background-color: var(--accent-color);
 }
+
 /* footer */
 .footer {
-  background-color: #2f303a;
+  background-color: var(--dark-background);
 }
+
 .footer .link {
   color: var(--clean-color);
 }
+
 .address {
   color: var(--clean-color);
   font-style: normal;
@@ -165,6 +191,7 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+
 .address .link,
 .address .link:visited {
   color: rgba(255, 255, 255, 0.6);
